feat: remove useless text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Online SWF Player</title>
 </head>
 <body>
-    <h1>My SWF Player</h1>
+    <!-- <h1>My SWF Player</h1> -->
     
     <!-- Ruffle.js -->
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
@@ -24,7 +24,7 @@
     </script>
     
     <div id="player-container" style="width:1600px; height:1200px;">
-        <p>Loading SWF...</p>
+        <!-- <p>Loading SWF...</p> -->
     </div>
 
 </body>
